# OOP-projekt

./: api_handler.py  graph_generator.py  main.py  models.py  news_handler.py  portfolio.py  pyproject.toml  server.py  stock_data.py  user.py
Akciovy-vyhledavac/: api_handler.py  graph_generator.py  models.py  news_handler.py  portfolio.py  server.py  stock_data.py  user.py
Akciovy-vyhledavac/instance/: portfolio.db
Akciovy-vyhledavac/static/css/: custom.css
Akciovy-vyhledavac/static/js/: main.js
Akciovy-vyhledavac/templates/: add_to_portfolio.html  compare.html  index.html  layout.html  portfolio.html  user_profile.html
templates/: index.html
